--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.10"
 dependencies = [
     "dreamsim>=0.2.1",
     "imageio>=2.37.0",
+    "open3d>=0.19.0",
     "pyqt5>=5.15.11",
 ]
